# NLP7101-assignment-2B-v2

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: README.md  pyproject.toml
data/modules/: __init__.py  data_loader.py  feature_extractors.py  utils.py  visualizations.py
data/reports/: EDA_SUMMARY.md
data/research/: literature_review.md
data/scripts/: 01_data_exploration.py  02_basic_stats.py  03_complexity_features.py  03_complexity_features_parallel.py  04_lexical_features.py  04_lexical_features_parallel.py  monitor_progress.sh
docs/: CODET5_IMPLEMENTATION.md  GPU_ACCELERATION_GUIDE.md  HARDWARE_OPTIMIZATION_ANALYSIS.md  STAGE1_MODEL_SEARCH_IMPLEMENTATION.md
report_files/: exploration_report.md
scripts/: generate_report_figures.py  generate_submission.py  generate_submission_codet5.py  generate_submission_codet5p_770m.py  monitor_tests.sh  run_classifier_batch.sh  run_selected_classifiers.sh  setup_gpu_acceleration.py  train_pipeline.py  train_stage1_model_search.py
src/evaluation/: evaluate_pipeline.py  evaluate_pipeline_codet5.py  evaluate_stage1.py  evaluate_stage2.py
src/features/: feature_loader.py  feature_processor.py
src/models/: pipeline.py  stage1_classifier.py  stage2_classifier.py
src/training/: hyperparam_search_770m.py  train_stage1.py  train_stage1_mlp.py  train_stage2.py  train_stage2_codet5.py  train_stage2_codet5_2b.py  (+3 more)
tests/: test_220m_model.py  test_batch_size_optimization.py  test_codet5_verbose.py  test_codet5p_770m.py  test_model_loading.py  test_simple_codet5.py  test_stage2_codet5_small.py
(+2 files in other folders)
