[project]
name = "assignment-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.7.2",
    "joblib>=1.3.0",
    "radon>=6.0.1",
    "lexicalrichness>=0.5.1",
    "tqdm>=4.66.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
]
