[project]
name = "assignment-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.7.2",
    "joblib>=1.3.0",
    "radon>=6.0.1",
    "lexicalrichness>=0.5.1",
    "tqdm>=4.66.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "transformers>=4.57.3",
    "torch>=2.9.1",
    "kaggle>=1.8.2",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
]
